bad/func_arg_of_type_void_array.example_compiler_output
ERROR
[1mbad/func_arg_of_type_void_array.lat:2:10: [1;31merror: [0;1mfunction argument `x` cannot have type `void[]`[m
void foo(void[] x) {}
         [1;32m^[m
